Fixed most AWSConnector issues excluding cognitive load fixes